# ultime

./: Cargo.toml  readme.md
.github/workflows/: main.yml  release.yml
src/: cli.rs  generate.rs  main.rs  new.rs  run.rs
src/generate/: common.rs  component.rs  db.rs  endpoint.rs  page.rs
templates/blog/: Cargo.toml.jinja2
templates/blog/src/: app.rs.jinja2  lib.rs  main.rs  main.rs.jinja2
templates/blog/src/components/: app.rs  mod.rs
templates/generate/: component.rs.jinja2  crud.rs.jinja2  endpoint.empty.rs.jinja2  endpoint.event.rs.jinja2  endpoint.mutation.rs.jinja2  endpoint.query.rs.jinja2  endpoint.rs.jinja2  endpoint.schema.rs.jinja2  mutation.rs.jinja2  page.rs.jinja2  query.rs.jinja2
templates/projects/blog/: Cargo.toml.jinja2
templates/projects/blog/mutations/: comment.surql
templates/projects/blog/queries/: navbar.surql  post.surql  post_by_id.surql  posts.surql
templates/projects/blog/schemas/: comment.surql  permission.surql  post.surql  user.surql
templates/projects/blog/src/: api.rs  app.rs.jinja2  lib.rs  main.rs.jinja2  pages.rs
templates/projects/blog/src/api/: comment.rs  create_blog_post.rs  navbar.rs  post_by_id.rs  posts.rs  publish_post.rs  (+4 more)
templates/projects/blog/style/: main.scss
templates/projects/empty/: index.html.jinja2
templates/projects/empty/src/: app.rs.jinja2
tests/: main.rs
tests/cli/: generate.rs  mod.rs  new.rs
tests/cli/generate/: component.rs  db.rs  endpoint.rs  page.rs
tests/cli/generate/endpoint/: empty.rs  event.rs  exclusion.rs  mutation.rs  query.rs  schema.rs
tests/helpers/: common.rs
(+9 files in other folders)
