[package]
name = "ultime"
version = "0.0.1"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["derive"] }
convert_case = "0.6.0"
fs_extra = "1.3.0"
include_dir = "0.7.3"
minijinja = "0.34.0"
notify = "6.0.0"
regex = "1.8.2"
serde = { version = "1.0.163", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9" }

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
pretty_assertions = "1.3.0"
